# docs/openapi.yaml
@@ -223,6 +223,42 @@ paths:
           $ref: "#/components/responses/Conflict"
         "500":
           $ref: "#/components/responses/ServerError"
+  /api/v1/auth/passkeys/login/begin:
+    post:
+      summary: Begin passkey login
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/PasskeyLoginBeginResponse"
+        "500":
+          $ref: "#/components/responses/ServerError"
+  /api/v1/auth/passkeys/login/finish:
+    post:
+      summary: Finish passkey login
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/PasskeyLoginFinishRequest"
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/TokenPair"
+        "400":
+          $ref: "#/components/responses/BadRequest"
+        "404":
+          $ref: "#/components/responses/NotFound"
+        "409":
+          $ref: "#/components/responses/Conflict"
+        "500":
+          $ref: "#/components/responses/ServerError"
   /api/v1/profile/devices:
     get:
       summary: User devices
@@ -1599,6 +1635,17 @@ components:
       properties:
         credential: { type: object }
       required: [credential]
+    PasskeyLoginBeginResponse:
+      type: object
+      properties:
+        public_key_options: { type: object }
+        session_id: { type: string }
+    PasskeyLoginFinishRequest:
+      type: object
+      properties:
+        session_id: { type: string }
+        credential: { type: object }
+      required: [session_id, credential]
     UserLoginHistoryDTO:
       type: object
       properties:
